# md-reader

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  RELEASE_NOTES_v0.1.0.md  build.rs
.github/workflows/: release.yml
assets/: editor_shell.html
docs/plans/: 2026-03-06-persistent-language-and-launcher-design.md  2026-03-06-persistent-language-and-launcher.md
src/: assets.rs  desktop.rs  io.rs  lib.rs  main.rs  runtime_paths.rs  ui.rs
tests/: editor_shell_i18n.rs  release_workflow.rs  runtime_persistence.rs  rust_parser_and_io.rs
