[package]
name = "md-beader"
version = "0.1.0"
edition = "2024"

[lib]
name = "markdown_reader"

[dependencies]
eframe = "0.33"
rfd = "0.15"
chardetng = "0.1"
encoding_rs = "0.8"
thiserror = "2"
wry = "0.46"
tao = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
ico = "0.4"
winresource = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
