[package]
name = "md-bider"
version = "0.4.7"
edition = "2024"

[lib]
name = "md_bider"

[dependencies]
eframe = "0.33"
rfd = "0.15"
chardetng = "0.1"
encoding_rs = "0.8"
thiserror = "2"
wry = "0.46"
tao = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"

[build-dependencies]
ico = "0.4"
winresource = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
